force-app/main/default/objects/PRM_Business_Plan__c/PRM_Business_Plan__c.object-meta.xml
<CustomObject>
    <description>Contains business plan information for partners.</description>
    <label>Business Plan</label>
    <nameField>
        <displayFormat>{YYYY}-{MM}-{DD}-{00000}</displayFormat>
        <label>Business Plan</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>