force-app/main/default/objects/PRM_Business_Plan__c/fields/Iron_Mountain_Channel_Manager__c.field-meta.xml
<CustomField>
    <fullName>Iron_Mountain_Channel_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Channel Manager</description>
    <label>Iron Mountain Channel Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Business_Plannings</relationshipName>
    <type>Lookup</type>
</CustomField>