force-app/main/default/objects/PRM_Business_Plan__c/fields/Partner_s_current_year_reven_goal__c.field-meta.xml
<CustomField>
    <fullName>Partner_s_current_year_reven_goal__c</fullName>
    <description>The current years revenue goal for the partner.</description>
    <label>Partner’s current year revenue goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>