force-app/main/default/objects/PRM_Business_Plan__c/fields/Partners_top_five_customers__c.field-meta.xml
<CustomField>
    <fullName>Partners_top_five_customers__c</fullName>
    <description>Top 5 customers of the partner.</description>
    <label>Partners top five customers</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>