force-app/main/default/objects/PRM_Business_Plan__c/fields/Partners_top_five_technology_vendors__c.field-meta.xml
<CustomField>
    <fullName>Partners_top_five_technology_vendors__c</fullName>
    <description>The partners top 5 technology vendors.</description>
    <label>Partners top five technology vendors</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>