force-app/main/default/objects/PRM_Business_Plan__c/fields/percent_of_revenue_from_product_resell__c.field-meta.xml
<CustomField>
    <fullName>percent_of_revenue_from_product_resell__c</fullName>
    <description>The percent of revenue received from the product resell.</description>
    <label>Percent of revenue from product resell</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>