force-app/main/default/objects/PRM_Business_Plan__c/fields/percent_of_revenue_from_service_delivery__c.field-meta.xml
<CustomField>
    <fullName>percent_of_revenue_from_service_delivery__c</fullName>
    <description>The percent of revenue that is from service delivery.</description>
    <label>Percent of revenue from service delivery</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>