force-app/main/default/objects/PRM_Business_Plan__c/fields/Principal_Partner_Contact__c.field-meta.xml
<CustomField>
    <fullName>Principal_Partner_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The principal contact at the partner.</description>
    <label>Principal Partner Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Business_Plannings1</relationshipName>
    <type>Lookup</type>
</CustomField>