force-app/main/default/objects/PRM_Business_Plan__c/fields/Target_markets_Partner_serve__c.field-meta.xml
<CustomField>
    <fullName>Target_markets_Partner_serve__c</fullName>
    <description>The target markets served by the partner.</description>
    <label>Target markets Partner serve</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SMB (1 – 1000)</fullName>
            </value>
            <value>
                <fullName>Enterprise (1002+ Employees)</fullName>
            </value>
            <value>
                <fullName>Public Sector (GHE / Federal / GSA)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>