force-app/main/default/objects/PRM_Business_Plan__c/fields/The_Partner_s_previous_year_s_revenue__c.field-meta.xml
<CustomField>
    <fullName>The_Partner_s_previous_year_s_revenue__c</fullName>
    <description>The revenue generated by the partner in the previous year.</description>
    <label>The Partner’s previous year’s revenue?</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>