force-app/main/default/objects/PRM_Business_Plan__c/fields/Total_number_of_Delivery_Consultants__c.field-meta.xml
<CustomField>
    <fullName>Total_number_of_Delivery_Consultants__c</fullName>
    <description>Total number of delivery/consultants.</description>
    <label>Total number of Delivery/Consultants</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>