force-app/main/default/objects/PRM_Business_Plan__c/fields/Total_number_of_Marketing_Reps__c.field-meta.xml
<CustomField>
    <fullName>Total_number_of_Marketing_Reps__c</fullName>
    <description>Total number of marketing reps.</description>
    <label>Total number of Marketing Reps</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>