force-app/main/default/objects/PRM_Business_Plan__c/listViews/PRM_Partner_My_Business_Plans.listView-meta.xml
<ListView>
    <fullName>PRM_Partner_My_Business_Plans</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <division>*</division>
    <filterScope>Everything</filterScope>
    <label>My Business Plans</label>
    <language>en_US</language>
    <sharedTo>
        <allPartnerUsers></allPartnerUsers>
    </sharedTo>
</ListView>